--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </style>
 
     <!-- Js files -->
-    <script type="text/javascript" src="bootstrap/bootstrap.min.js"></script>
+    <!-- <script type="text/javascript" src="bootstrap/bootstrap.min.js"></script> -->
     <script type="text/javascript" src="angular/angular.min.js"></script>
     <script type="text/javascript" src="angular/angular-ui-router.min.js"></script>
     <script type="text/javascript" src="angular/angular-animate.min.js"></script>
