--- a/partial-home.html
+++ b/partial-home.html
@@ -1,6 +1,12 @@
 <div class="jumbotron text-center">
   <h1>The Home page</h1>
   <p>
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
     This page demonstrates <span class="text-danger">nested</span> views.
   </p>
+  <a ui-sref=".list" class="btn btn-primary">List</a>
+  <a ui-sref=".paragraph" class="btn btn-danger">Paragraph</a>
+
 </div>
+
+<div ui-view></div>
