Add style to the form

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <!-- CSS by bootstrap  -->
     <link rel="stylesheet" href="bootstrap/bootstrap.min.css" media="screen" title="no title">
     <link rel="stylesheet" href="bootstrap/bootstrap-theme.min.css" media="screen" title="no title">
+    <link rel="stylesheet" href="style.css">
     <style media="screen">
       .navbar { border-radius: 0; }
     </style>
